--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify-cms": "^6.10.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-source-filesystem": "^4.10.0",
     "gatsby-transformer-remark": "^5.10.1",
