--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.25",
     "typescript": "^4.6.2"
   }
 }
