--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "tscheck": "tsc --noEmit",
+    "lint": "ts-standard --fix"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
@@ -34,6 +35,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.25",
+    "ts-standard": "^11.0.0",
     "typescript": "^4.6.2"
   }
 }
