--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.25",
+    "firebase-tools": "^10.6.0",
     "ts-standard": "^11.0.0",
     "typescript": "^4.6.2"
   }
