--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "tscheck": "tsc --noEmit",
-    "lint": "ts-standard --fix"
+    "lint": "eslint src/**/*.{ts,tsx} --fix"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
@@ -34,9 +34,14 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "firebase-tools": "^10.6.0",
-    "ts-standard": "^11.0.0",
     "typescript": "^4.6.2"
   }
 }
