--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^4.10.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify-cms": "^6.10.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-source-filesystem": "^4.10.0",
@@ -28,6 +29,7 @@
     "netlify-cms-app": "^2.15.69",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.3",
     "vega": "^5.22.1",
     "vega-embed": "^6.20.8",
